--- a/aduboffour_joseph--final-project/public/index.html
+++ b/aduboffour_joseph--final-project/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Joseph A. - First Portfolio Website</title>
+    <!--<title>Joseph A. - First Portfolio Website</title>-->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
